buildscript {
    repositories {
        // These repositories are only for Gradle plugins, put any other repositories in the repository block further below
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '[6.0,6.2)', changing: true
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}
plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.spongepowered.mixin' version '0.7.+'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

def shouldBundleRuntimeArtifact = { String group, String name ->
    group in [
            'com.github.ReplayMod',
            'com.github.ReplayMod.JavaBlend',
            'com.github.viaversion',
            'com.github.javagl.JglTF',
            'org.aspectj',
            'com.googlecode.mp4parser',
            'com.google.apis',
            'com.google.api-client',
            'com.google.oauth-client',
            'com.google.http-client',
            'com.fasterxml.jackson.core',
            'org.mortbay.jetty'
    ] || (group == 'org.lwjgl' && name == 'lwjgl-tinyexr')
            || (group == 'org.apache.commons' && name in ['commons-exec', 'commons-collections4'])
            || (group == 'commons-cli' && name == 'commons-cli')
}

def bundledRuntimeClassesDir = layout.buildDirectory.dir('bundledRuntimeClasses')
def bundledRuntimeExcludes = [
        'META-INF/*.DSA',
        'META-INF/*.RSA',
        'META-INF/*.SF',
        'META-INF/jarjar/**',
        'META-INF/jars/**',
        'META-INF/maven/**',
        'com/google/common/**',
        'com/google/thirdparty/**',
        'org/slf4j/**',
        'module-info.class'
]
def replayMixinConfigs = [
        'mixins.replayneo.json'
]

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'info'
            replayMixinConfigs.each { mixinConfig ->
                args '--mixin', mixinConfig
            }
            jvmArgs(
                    "-Xms4G",
                    "-Xmx6G",
                    "-XX:+UseG1GC",
                    "-XX:+ParallelRefProcEnabled",
                    "-XX:MaxGCPauseMillis=100",
                    "-XX:+UnlockExperimentalVMOptions",
                    "-XX:+DisableExplicitGC",
                    "-XX:G1NewSizePercent=20",
                    "-XX:G1MaxNewSizePercent=40",
                    "-XX:G1HeapRegionSize=8M",
                    "-XX:G1ReservePercent=20",
                    "-XX:InitiatingHeapOccupancyPercent=15"
            )
            mods {
                replayneo {
                    source sourceSets.main
                }
            }
        }
        server {
            workingDirectory project.file('run')
            args '--nogui'
            mods {
                replayneo {
                    source sourceSets.main
                }
            }
        }
    }
}

mixin {
    add sourceSets.main, 'mixins.replayneo.refmap.json'
    replayMixinConfigs.each { mixinConfig ->
        config mixinConfig
    }
}

tasks.register('unpackBundledRuntimeClasses', Copy) {
    into bundledRuntimeClassesDir
    from({
        configurations.runtimeClasspath.resolvedConfiguration.resolvedArtifacts
                .findAll { artifact -> shouldBundleRuntimeArtifact(artifact.moduleVersion.id.group, artifact.name) }
                .collect { artifact -> zipTree(artifact.file) }
    })
    exclude bundledRuntimeExcludes
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.register('copyBundledRuntimeClassesToResources', Copy) {
    dependsOn 'processResources', 'unpackBundledRuntimeClasses'
    from bundledRuntimeClassesDir
    into layout.buildDirectory.dir('resources/main')
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.named('classes') {
    dependsOn 'copyBundledRuntimeClassesToResources'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-AdisableTargetValidator=true']
}

repositories {
    mavenCentral()
    maven { url = 'https://maven.minecraftforge.net' }
    maven { url = 'https://jitpack.io' }
    maven { url = 'https://cursemaven.com' }
    maven {
        name = 'Modrinth'
        url = 'https://api.modrinth.com/maven'
        content {
            includeGroup 'maven.modrinth'
        }
    }
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    //外部API
    implementation 'com.github.ReplayMod:ReplayStudio:d9f7c11'
    implementation 'com.github.viaversion:opennbt:0a02214'
    implementation fg.deobf("com.github.ReplayMod:lwjgl-utils:27dcd66")
    implementation 'com.github.javagl.JglTF:jgltf-model:3af6de4'
    implementation 'com.github.ReplayMod.JavaBlend:2.79.0:a0696f8'
    implementation 'org.aspectj:aspectjrt:1.8.2'
    implementation 'org.lwjgl:lwjgl-tinyexr:3.3.1'
    implementation 'io.github.llamalad7:mixinextras-forge:0.5.3'
    implementation 'com.googlecode.mp4parser:isoparser:1.1.7'
    implementation 'org.apache.commons:commons-exec:1.3'
    implementation 'com.google.apis:google-api-services-youtube:v3-rev178-1.22.0'
    implementation 'com.google.api-client:google-api-client-gson:1.20.0'
    implementation 'com.google.api-client:google-api-client-java6:1.20.0'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.20.0'

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    compileOnly annotationProcessor('io.github.llamalad7:mixinextras-common:0.5.3')
    compileOnly fg.deobf('maven.modrinth:iris:1.6.11+1.20.1')
    compileOnly fg.deobf("curse.maven:changed-minecraft-mod-661527:7906615")
    //模组渲染测试
    runtimeOnly fg.deobf("curse.maven:changed-minecraft-mod-661527:7906615")
}

tasks.named('jar', Jar) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes([
                'MixinConfigs': replayMixinConfigs.join(',')
        ])
    }
    from({
        configurations.runtimeClasspath.resolvedConfiguration.resolvedArtifacts
                .findAll { artifact -> shouldBundleRuntimeArtifact(artifact.moduleVersion.id.group, artifact.name) }
                .collect { artifact -> zipTree(artifact.file) }
    }) {
        exclude bundledRuntimeExcludes
    }
}

processResources {
    def properties = [
            version: project.version,
            mod_id: mod_id,
            mod_name: mod_name,
            mod_license: mod_license,
            mod_authors: mod_authors,
            mod_description: mod_description,
            displayURL: displayURL,
            forge_version_range: forge_version_range,
            minecraft_version_range: minecraft_version_range
    ]

    inputs.properties properties
    filesMatching('META-INF/mods.toml') {
        expand properties
    }
}
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}
